--- a/src/pages/login/login.scss
+++ b/src/pages/login/login.scss
@@ -1,5 +1,7 @@
 :root {
     --background-image: url('../../images/slBg.png');
+    background-repeat: no-repeat;
+    background-size: cover;
   }
 
 .login1 {
@@ -8,5 +10,16 @@
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
-    height: 100vh;
+    height: 140vh;
+    display: flex;
+    flex-direction: column;
+    flex:0 1;
+  }
+
+  .footer {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex: 1 0;
   }
